<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Imágenes de Navidad</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="title_splash">Imágenes de Navidad</string>
    <string name="action_share">Share App</string>
    
    <!-- Dialog -->
    <string name="rate_me">Califícame :)</string>
    <string name="rate_ok">Calificar</string>}
    <string name="rate_cancel">Aún no</string>
    <string name="options">¿Qué deseas hacer?</string>
    <string name="download">Descargar</string>
    <string name="background">Fondo de pantalla</string>
    <string name="saved_image">Imagen guardada con éxito!</string>
    <string name="wallpaper_image">Fondo de pantalla listo!</string>

    <!-- Parse Keys -->
    <string name="application_id">JtVQPJ4fZzTBW1GgmKH2ZVxJq5cORdgJacpqMPA7</string>
    <string name="client_key">DKMfDjN7WnVB6SbF6a2qvZkTtPKgJui3gobtKuLj</string>

    <!-- Admob Key -->
    <string name="admob_key">ca-app-pub-8995045147204986/8006531356</string>
    <string name="admob_interstitial">ca-app-pub-8995045147204986/1959997756</string>
</resources>
