<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <ImageView
        android:layout_gravity="center"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/logo_meme" />
    <TextView
        android:id="@+id/txt_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_margin="10dp"
        android:text="@string/options"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/btn_download"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_btn_green"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:layout_margin="5dp"
            android:text="@string/download"/>
        <Button
            android:id="@+id/btn_background"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_btn_green"
            android:textAllCaps="false"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            android:text="@string/background"/>
    </LinearLayout>

</LinearLayout>